--- a/chai_our_Django/chai/templates/chai/all_chai.html
+++ b/chai_our_Django/chai/templates/chai/all_chai.html
@@ -1,11 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>chai our code </title>
-</head>
-<body>
-    <h1>All the chai are avalable here</h1>
-</body>
-</html>
+{% extends "website/layout.html" %} {% block title %} Chai Page {% endblock %}
+
+<div class="grid grid-cols-3 gap-4">
+  {% block Content %}
+  <h1>All chai for you</h1>
+
+  {% for chai in chais %}
+    <div class="bg-white p-4 shadow-md">
+        <img class="rounded" src="{{chai.image.url}}" alt="" />
+        <h3>{{chai.name}}</h3>
+        <a href="{% url 'chai_detail' chai.id %}">
+            <button 
+            type="button"
+            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+            >
+            {{chai.type}} - {{chai.id}}
+
+
+            </button>
+        </a>
+    </div>
+    {% endfor %}
+</div> 
+
+{% endblock %}
+
